--- a/konfigurator.html
+++ b/konfigurator.html
@@ -125,191 +125,193 @@
 <script>
     let boxCounter = 1;
 
-    function createBox(config = {}) {
-        boxCounter++;
-        const container = document.getElementById('config-container');
-        const newBox = document.createElement('div');
-        newBox.className = 'config-box';
-        newBox.id = `box-${boxCounter}`;
-        newBox.innerHTML = `
-            <span class="add-box" onclick="addBox()">&#43;</span>
-            <span class="remove-box" onclick="removeBox(this)">&#8722;</span>
-            <h2 data-translate-key="artikel">Artikel</h2>
-            <label for="artikelname-${boxCounter}" data-translate-key="artikelname">Artikelname</label>
-            <input type="text" id="artikelname-${boxCounter}" name="artikelname" value="${config.artikelname || ''}">
+   let currentLanguage = 'de'; // Standardmäßig Deutsch
 
-            <label for="artikellaengen-${boxCounter}" data-translate-key="artikellaengen">Artikel Längen</label>
-            <input type="text" id="artikellaengen-${boxCounter}" name="artikellaengen" value="${config.artikellaengen || ''}">
+   function createBox(config = {}) {
+       boxCounter++;
+       const container = document.getElementById('config-container');
+       const newBox = document.createElement('div');
+       newBox.className = 'config-box';
+       newBox.id = `box-${boxCounter}`;
+       newBox.innerHTML = `
+           <span class="add-box" onclick="addBox()">&#43;</span>
+           <span class="remove-box" onclick="removeBox(this)">&#8722;</span>
+           <h2 data-translate-key="artikel">${translations[currentLanguage].artikel}</h2>
+           <label for="artikelname-${boxCounter}" data-translate-key="artikelname">${translations[currentLanguage].artikelname}</label>
+           <input type="text" id="artikelname-${boxCounter}" name="artikelname" value="${config.artikelname || ''}">
 
-            <label for="artikelgroessen-${boxCounter}" data-translate-key="artikelgroessen">Artikel Größen</label>
-            <input type="text" id="artikelgroessen-${boxCounter}" name="artikelgroessen" value="${config.artikelgroessen || ''}">
+           <label for="artikellaengen-${boxCounter}" data-translate-key="artikellaengen">${translations[currentLanguage].artikellaengen}</label>
+           <input type="text" id="artikellaengen-${boxCounter}" name="artikellaengen" value="${config.artikellaengen || ''}">
 
-            <label for="vollzeitMitarbeiter-${boxCounter}" data-translate-key="vollzeitMitarbeiter">Vollzeitmitarbeiter</label>
-            <input type="number" id="vollzeitMitarbeiter-${boxCounter}" name="vollzeitMitarbeiter" value="${config.vollzeitMitarbeiter || ''}">
+           <label for="artikelgroessen-${boxCounter}" data-translate-key="artikelgroessen">${translations[currentLanguage].artikelgroessen}</label>
+           <input type="text" id="artikelgroessen-${boxCounter}" name="artikelgroessen" value="${config.artikelgroessen || ''}">
 
-            <label for="teilzeitMitarbeiter-${boxCounter}" data-translate-key="teilzeitMitarbeiter">Teilzeitmitarbeiter</label>
-            <input type="number" id="teilzeitMitarbeiter-${boxCounter}" name="teilzeitMitarbeiter" value="${config.teilzeitMitarbeiter || ''}">
+           <label for="vollzeitMitarbeiter-${boxCounter}" data-translate-key="vollzeitMitarbeiter">${translations[currentLanguage].vollzeitMitarbeiter}</label>
+           <input type="number" id="vollzeitMitarbeiter-${boxCounter}" name="vollzeitMitarbeiter" value="${config.vollzeitMitarbeiter || ''}">
 
-            <label for="tauschquote-${boxCounter}" data-translate-key="tauschquote">Tauschquote pro Woche</label>
-            <input type="number" step="0.01" id="tauschquote-${boxCounter}" name="tauschquote" value="${config.tauschquote || ''}">
+           <label for="teilzeitMitarbeiter-${boxCounter}" data-translate-key="teilzeitMitarbeiter">${translations[currentLanguage].teilzeitMitarbeiter}</label>
+           <input type="number" id="teilzeitMitarbeiter-${boxCounter}" name="teilzeitMitarbeiter" value="${config.teilzeitMitarbeiter || ''}">
 
-            <label for="lieferrhythmus-${boxCounter}" data-translate-key="lieferrhythmus">Lieferrhythmus</label>
-            <input type="text" id="lieferrhythmus-${boxCounter}" name="lieferrhythmus" value="${config.lieferrhythmus || '3'}">
+           <label for="tauschquote-${boxCounter}" data-translate-key="tauschquote">${translations[currentLanguage].tauschquote}</label>
+           <input type="number" step="0.01" id="tauschquote-${boxCounter}" name="tauschquote" value="${config.tauschquote || ''}">
 
-            <button type="button" onclick="calculate('box-${boxCounter}')" data-translate-key="berechnen">Berechnen</button>
-            <div class="result" id="result-${boxCounter}"></div>
-        `;
-        container.appendChild(newBox);
-        updateRemoveButtons();
-    }
+           <label for="lieferrhythmus-${boxCounter}" data-translate-key="lieferrhythmus">${translations[currentLanguage].lieferrhythmus}</label>
+           <input type="text" id="lieferrhythmus-${boxCounter}" name="lieferrhythmus" value="${config.lieferrhythmus || '3'}">
 
-    function addBox() {
-        createBox();
-    }
+           <button type="button" onclick="calculate('box-${boxCounter}')" data-translate-key="berechnen">${translations[currentLanguage].berechnen}</button>
+           <div class="result" id="result-${boxCounter}"></div>
+       `;
+       container.appendChild(newBox);
+       updateRemoveButtons();
+   }
 
-    function removeBox(element) {
-        const box = element.parentElement;
-        box.remove();
-        updateRemoveButtons();
-    }
+   function addBox() {
+       createBox();
+   }
 
-    function updateRemoveButtons() {
-        const removeButtons = document.querySelectorAll('.remove-box');
-        if (removeButtons.length === 1) {
-            removeButtons[0].style.display = 'none';
-        } else {
-            removeButtons.forEach(button => button.style.display = 'inline');
-        }
-    }
+   function removeBox(element) {
+       const box = element.parentElement;
+       box.remove();
+       updateRemoveButtons();
+   }
 
-    function viewResults() {
-        results = [];
-        const boxes = document.querySelectorAll('.config-box');
-        boxes.forEach(box => {
-            const artikelname = box.querySelector('input[name="artikelname"]').value;
-            const artikellaengen = box.querySelector('input[name="artikellaengen"]').value;
-            const artikelgroessen = box.querySelector('input[name="artikelgroessen"]').value;
-            const vollzeitMitarbeiter = parseFloat(box.querySelector('input[name="vollzeitMitarbeiter"]').value) || 0;
-            const teilzeitMitarbeiter = parseFloat(box.querySelector('input[name="teilzeitMitarbeiter"]').value) || 0;
-            const tauschquote = parseFloat(box.querySelector('input[name="tauschquote"]').value) || 0;
-            const lieferrhythmus = box.querySelector('input[name="lieferrhythmus"]').value;
+   function updateRemoveButtons() {
+       const removeButtons = document.querySelectorAll('.remove-box');
+       if (removeButtons.length === 1) {
+           removeButtons[0].style.display = 'none';
+       } else {
+           removeButtons.forEach(button => button.style.display = 'inline');
+       }
+   }
 
-            const teilzeitMitarbeiter1Ergebnis = teilzeitMitarbeiter * 0.5;
-            const mitarbeiterAnzahl = vollzeitMitarbeiter + teilzeitMitarbeiter1Ergebnis;
-            const mitarbeiterAnzahlGerundet = Math.ceil(mitarbeiterAnzahl);
-            const teileProMitarbeiter = mitarbeiterAnzahlGerundet * tauschquote;
-            const ausstattungsmenge = teileProMitarbeiter * 3;
+   function viewResults() {
+       results = [];
+       const boxes = document.querySelectorAll('.config-box');
+       boxes.forEach(box => {
+           const artikelname = box.querySelector('input[name="artikelname"]').value;
+           const artikellaengen = box.querySelector('input[name="artikellaengen"]').value;
+           const artikelgroessen = box.querySelector('input[name="artikelgroessen"]').value;
+           const vollzeitMitarbeiter = parseFloat(box.querySelector('input[name="vollzeitMitarbeiter"]').value) || 0;
+           const teilzeitMitarbeiter = parseFloat(box.querySelector('input[name="teilzeitMitarbeiter"]').value) || 0;
+           const tauschquote = parseFloat(box.querySelector('input[name="tauschquote"]').value) || 0;
+           const lieferrhythmus = box.querySelector('input[name="lieferrhythmus"]').value;
 
-            const result = {
-                artikelname,
-                artikellaengen,
-                artikelgroessen,
-                vollzeitMitarbeiter,
-                teilzeitMitarbeiter,
-                tauschquote,
-                lieferrhythmus,
-                teileProMitarbeiter,
-                ausstattungsmenge
-            };
+           const teilzeitMitarbeiter1Ergebnis = teilzeitMitarbeiter * 0.5;
+           const mitarbeiterAnzahl = vollzeitMitarbeiter + teilzeitMitarbeiter1Ergebnis;
+           const mitarbeiterAnzahlGerundet = Math.ceil(mitarbeiterAnzahl);
+           const teileProMitarbeiter = mitarbeiterAnzahlGerundet * tauschquote;
+           const ausstattungsmenge = teileProMitarbeiter * 3;
 
-            results.push(result);
-        });
-        sessionStorage.setItem('results', JSON.stringify(results));
-        window.location.href = 'results.html';
-    }
+           const result = {
+               artikelname,
+               artikellaengen,
+               artikelgroessen,
+               vollzeitMitarbeiter,
+               teilzeitMitarbeiter,
+               tauschquote,
+               lieferrhythmus,
+               teileProMitarbeiter,
+               ausstattungsmenge
+           };
 
-    function calculate(boxId) {
-        const box = document.getElementById(boxId);
-        const artikelname = box.querySelector('input[name="artikelname"]').value;
-        const artikellaengen = box.querySelector('input[name="artikellaengen"]').value;
-        const artikelgroessen = box.querySelector('input[name="artikelgroessen"]').value;
-        const vollzeitMitarbeiter = parseFloat(box.querySelector('input[name="vollzeitMitarbeiter"]').value) || 0;
-        const teilzeitMitarbeiter = parseFloat(box.querySelector('input[name="teilzeitMitarbeiter"]').value) || 0;
-        const tauschquote = parseFloat(box.querySelector('input[name="tauschquote"]').value) || 0;
-        const lieferrhythmus = box.querySelector('input[name="lieferrhythmus"]').value;
+           results.push(result);
+       });
+       sessionStorage.setItem('results', JSON.stringify(results));
+       window.location.href = 'results.html';
+   }
 
-        const teilzeitMitarbeiter1Ergebnis = teilzeitMitarbeiter * 0.5;
-        const mitarbeiterAnzahl = vollzeitMitarbeiter + teilzeitMitarbeiter1Ergebnis;
-        const mitarbeiterAnzahlGerundet = Math.ceil(mitarbeiterAnzahl);
-        const teileProMitarbeiter = mitarbeiterAnzahlGerundet * tauschquote;
-        const ausstattungsmenge = teileProMitarbeiter * 3;
+   function calculate(boxId) {
+       const box = document.getElementById(boxId);
+       const artikelname = box.querySelector('input[name="artikelname"]').value;
+       const artikellaengen = box.querySelector('input[name="artikellaengen"]').value;
+       const artikelgroessen = box.querySelector('input[name="artikelgroessen"]').value;
+       const vollzeitMitarbeiter = parseFloat(box.querySelector('input[name="vollzeitMitarbeiter"]').value) || 0;
+       const teilzeitMitarbeiter = parseFloat(box.querySelector('input[name="teilzeitMitarbeiter"]').value) || 0;
+       const tauschquote = parseFloat(box.querySelector('input[name="tauschquote"]').value) || 0;
+       const lieferrhythmus = box.querySelector('input[name="lieferrhythmus"]').value;
 
-        console.log('Artikelname:', artikelname);
-        console.log('Artikel Längen:', artikellaengen);
-        console.log('Artikel Größen:', artikelgroessen);
-        console.log('Vollzeitmitarbeiter:', vollzeitMitarbeiter);
-        console.log('Teilzeitmitarbeiter:', teilzeitMitarbeiter);
-        console.log('Tauschquote pro Woche:', tauschquote);
-        console.log('Lieferrhythmus:', lieferrhythmus);
-        console.log('Teilzeit Mitarbeiter Ergebnis:', teilzeitMitarbeiter1Ergebnis);
-        console.log('Mitarbeiter Anzahl:', mitarbeiterAnzahl);
-        console.log('Mitarbeiter Anzahl Gerundet:', mitarbeiterAnzahlGerundet);
-        console.log('Tauschmenge pro Woche:', teileProMitarbeiter);
-        console.log('Ausstattungsmenge:', ausstattungsmenge);
+       const teilzeitMitarbeiter1Ergebnis = teilzeitMitarbeiter * 0.5;
+       const mitarbeiterAnzahl = vollzeitMitarbeiter + teilzeitMitarbeiter1Ergebnis;
+       const mitarbeiterAnzahlGerundet = Math.ceil(mitarbeiterAnzahl);
+       const teileProMitarbeiter = mitarbeiterAnzahlGerundet * tauschquote;
+       const ausstattungsmenge = teileProMitarbeiter * 3;
 
-        box.querySelector('.result').innerHTML = `
-            <strong>Ergebnisse:</strong><br>
-            Tauschmenge pro Woche: ${teileProMitarbeiter}<br>
-            Ausstattungsmenge: ${ausstattungsmenge}
-        `;
-    }
+       console.log('Artikelname:', artikelname);
+       console.log('Artikel Längen:', artikellaengen);
+       console.log('Artikel Größen:', artikelgroessen);
+       console.log('Vollzeitmitarbeiter:', vollzeitMitarbeiter);
+       console.log('Teilzeitmitarbeiter:', teilzeitMitarbeiter);
+       console.log('Tauschquote pro Woche:', tauschquote);
+       console.log('Lieferrhythmus:', lieferrhythmus);
+       console.log('Teilzeit Mitarbeiter Ergebnis:', teilzeitMitarbeiter1Ergebnis);
+       console.log('Mitarbeiter Anzahl:', mitarbeiterAnzahl);
+       console.log('Mitarbeiter Anzahl Gerundet:', mitarbeiterAnzahlGerundet);
+       console.log('Tauschmenge pro Woche:', teileProMitarbeiter);
+       console.log('Ausstattungsmenge:', ausstattungsmenge);
 
-    const translations = {
-    de: {
-        artikel: "Artikel",
-        artikelname: "Artikelname",
-        artikellaengen: "Artikel Längen",
-        artikelgroessen: "Artikel Größen",
-        vollzeitMitarbeiter: "Vollzeitmitarbeiter",
-        teilzeitMitarbeiter: "Teilzeitmitarbeiter",
-        tauschquote: "Tauschquote pro Woche",
-        lieferrhythmus: "Lieferrhythmus",
-        berechnen: "Berechnen",
-        ergebnisseAnzeigen: "Ergebnisse anzeigen"
-    },
-    en: {
-        artikel: "Article",
-        artikelname: "Article name",
-        artikellaengen: "Article lengths",
-        artikelgroessen: "Article sizes",
-        vollzeitMitarbeiter: "Full-time employee",
-        teilzeitMitarbeiter: "Part-time employee",
-        tauschquote: "Exchange rate per week",
-        lieferrhythmus: "Delivery frequency",
-        berechnen: "Calculate",
-        ergebnisseAnzeigen: "Show Results"
-    }
-};
+       box.querySelector('.result').innerHTML = `
+           <strong>Ergebnisse:</strong><br>
+           Tauschmenge pro Woche: ${teileProMitarbeiter}<br>
+           Ausstattungsmenge: ${ausstattungsmenge}
+       `;
+   }
 
-function changeLanguage() {
-    const select = document.getElementById('language-select');
-    const selectedOption = select.options[select.selectedIndex];
-    const selectedLanguage = selectedOption.value;
-    const flagImage = selectedOption.getAttribute('data-image');
+   const translations = {
+       de: {
+           artikel: "Artikel",
+           artikelname: "Artikelname",
+           artikellaengen: "Artikel Längen",
+           artikelgroessen: "Artikel Größen",
+           vollzeitMitarbeiter: "Vollzeitmitarbeiter",
+           teilzeitMitarbeiter: "Teilzeitmitarbeiter",
+           tauschquote: "Tauschquote pro Woche",
+           lieferrhythmus: "Lieferrhythmus",
+           berechnen: "Berechnen",
+           ergebnisseAnzeigen: "Ergebnisse anzeigen"
+       },
+       en: {
+           artikel: "Article",
+           artikelname: "Article name",
+           artikellaengen: "Article lengths",
+           artikelgroessen: "Article sizes",
+           vollzeitMitarbeiter: "Full-time employee",
+           teilzeitMitarbeiter: "Part-time employee",
+           tauschquote: "Exchange rate per week",
+           lieferrhythmus: "Delivery frequency",
+           berechnen: "Calculate",
+           ergebnisseAnzeigen: "Show Results"
+       }
+   };
 
-    // Ändern des Flaggenbildes
-    document.getElementById('language-flag').src = flagImage;
+   function changeLanguage() {
+       const select = document.getElementById('language-select');
+       const selectedOption = select.options[select.selectedIndex];
+       currentLanguage = selectedOption.value;
+       const flagImage = selectedOption.getAttribute('data-image');
 
-    // Texte entsprechend der ausgewählten Sprache ändern
-    const elements = document.querySelectorAll('[data-translate-key]');
-    elements.forEach(element => {
-        const key = element.getAttribute('data-translate-key');
-        element.innerText = translations[selectedLanguage][key];
-    });
+       // Ändern des Flaggenbildes
+       document.getElementById('language-flag').src = flagImage;
 
-    // Anpassung weiterer Elemente
-    document.title = translations[selectedLanguage].artikel;
-}
+       // Texte entsprechend der ausgewählten Sprache ändern
+       const elements = document.querySelectorAll('[data-translate-key]');
+       elements.forEach(element => {
+           const key = element.getAttribute('data-translate-key');
+           element.innerText = translations[currentLanguage][key];
+       });
 
+       // Anpassung weiterer Elemente
+       document.title = translations[currentLanguage].artikel;
+   }
 
-    document.addEventListener('DOMContentLoaded', () => {
-        const savedResults = JSON.parse(sessionStorage.getItem('results'));
-        if (savedResults && savedResults.length > 0) {
-            savedResults.forEach(config => createBox(config));
-        } else {
-            createBox(); // Falls keine gespeicherten Daten vorhanden sind, eine leere Box erstellen
-        }
-    });
+   document.addEventListener('DOMContentLoaded', () => {
+       const savedResults = JSON.parse(sessionStorage.getItem('results'));
+       if (savedResults && savedResults.length > 0) {
+           savedResults.forEach(config => createBox(config));
+       } else {
+           createBox(); // Falls keine gespeicherten Daten vorhanden sind, eine leere Box erstellen
+       }
+   });
+
 </script>
 </body>
 </html>
