--- a/results.html
+++ b/results.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ergebnisse</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f4f4f4;
+            background-color: #1e1e1e;
+            color: #ffffff;
+        }
+        h1 {
+            text-align: center;
+            color: #007BFF;
         }
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         }
         table, th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #444;
         }
         th, td {
             padding: 12px;
@@ -26,8 +36,14 @@
         th {
             background-color: #007BFF;
             color: white;
+            font-weight: 500;
+        }
+        tr:nth-child(even) {
+            background-color: rgba(255, 255, 255, 0.05);
         }
         .button-container {
+            display: flex;
+            justify-content: center;
             margin-top: 20px;
         }
         .download-button, .back-button {
@@ -37,6 +53,7 @@
             border-radius: 5px;
             cursor: pointer;
             margin-right: 10px;
+            transition: background-color 0.3s;
         }
         .download-button {
             background-color: #28a745;
@@ -49,6 +66,23 @@
         }
         .back-button:hover {
             background-color: #0056b3;
+        }
+        @media (max-width: 768px) {
+            th, td {
+                padding: 10px;
+            }
+            .download-button, .back-button {
+                padding: 8px 16px;
+            }
+        }
+        @media (max-width: 480px) {
+            th, td {
+                padding: 8px;
+            }
+            .download-button, .back-button {
+                padding: 6px 12px;
+                font-size: 0.9em;
+            }
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
