--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin-bottom: 10px;
         }
         button:hover {
             background-color: #218838;
@@ -64,5 +65,6 @@
 <body>
 <h1>Konfigurator</h1>
 <button onclick="window.location.href='konfigurator.html'">Konfigurieren</button>
+<button onclick="window.location.href='systemkonfigurator.html'">Systemkonfigurator</button>
 </body>
 </html>
