--- a/systemkonfigurator.html
+++ b/systemkonfigurator.html
@@ -124,7 +124,7 @@
         top: 20px;
         left: 20px;
         padding: 10px 20px;
-        background-color: orange;
+        background-color: blue;
         color: white;
         border: none;
         border-radius: 5px;
