backButton color changed

--- a/systemkonfigurator.html
+++ b/systemkonfigurator.html
@@ -124,7 +124,7 @@
         top: 20px;
         left: 20px;
         padding: 10px 20px;
-        background-color: blue;
+        background-color: #00ace3;
         color: white;
         border: none;
         border-radius: 5px;
@@ -133,7 +133,7 @@
         transition: background-color 0.3s ease;
     }
     .backButton:hover {
-        background-color: #cc7000;
+        background-color: #fbba00;
     }
     .add-box, .remove-box {
         cursor: pointer;
