backButton color changed

--- a/konfigurator.html
+++ b/konfigurator.html
@@ -9,7 +9,7 @@
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
-            background-image: url('texxeo_SmartGate Classic_Home_Header.jpg');
+            background-image: url('EB5B88E4-48E0-49FA-ADBE-C6E8EEA42E4C.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
