backButton color changed

--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
 <body>
 <h1>Konfigurator</h1>
 <button onclick="window.location.href='konfigurator.html'">Konfigurieren</button>
-<button onclick="window.location.href='systemkonfigurator.html'">Systemkonfigurator</button>
+<!--<button onclick="window.location.href='systemkonfigurator.html'">Systemkonfigurator</button> -->!
 </body>
 </html>
