--- a/konfiguratorNew.html
+++ b/konfiguratorNew.html
@@ -241,8 +241,8 @@
     <label for="vollzeitMitarbeiter">Vollzeitmitarbeiter</label>
     <input type="number" id="vollzeitMitarbeiter">
 
-    <label for="teilzeitMitarbeiter">Teilzeitmitarbeiter</label>
-    <input type="number" id="teilzeitMitarbeiter">
+    <!--<label for="teilzeitMitarbeiter">Teilzeitmitarbeiter</label>
+    <input type="number" id="teilzeitMitarbeiter"> -->
 
     <label for="tauschquote">Tauschquote pro Woche</label>
     <input type="number" step="0.01" id="tauschquote">
