--- a/resultsTabelle.html
+++ b/resultsTabelle.html
@@ -67,7 +67,7 @@
     </tbody>
 </table>
 
-<a href="index.html" class="backButton">Zurück zur Startseite</a>
+<a href="konfiguratorNew.html" class="backButton">Zurück</a>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
